--- a/views/index.ejs
+++ b/views/index.ejs
@@ -147,17 +147,21 @@
   <script>
     var path_excel_file = "";
     $(document).ready(function () {
-      path_excel_file = '';
+      //path_excel_file = '';
     });
     $('#select-mon ul li ul li').click(function (e) {
       var get_mon = e.currentTarget.textContent;
       var num_mon = get_mon.split(' ')[1];
-
-      if (path_excel_file == "") {
-        path_excel_file = "ok";
+      var res = '<%= check_file %>';
+      alert(res.length);
+      if (path_excel_file == "" || res.length == 0) {
+        path_excel_file ="ok";
         $('#fileinput').focus().trigger('click');
       } else {
-        $('form').submit();
+        if ('<%= check_file %>' == "") {
+          $('form').submit();
+          alert('sub');
+        }
         LoadData(num_mon);
       }
     });
@@ -167,7 +171,7 @@
       xhttp.onreadystatechange = function () {
         if (this.readyState == 4 && this.status == 200) {
           $("#excel_data").html(this.response);
-          path_excel_file = "ok";
+         // path_excel_file = "ok";
         }
       };
       xhttp.open("POST", "/", true);
